2001-01-31  Derek Price  <derek.price@openavenue.com>

	* TODO: Add a note about 'cvs add' w/o write access

2001-01-29  Derek Price  <derek.price@openavenue.com>

	* NEWS: Rewrite the comment on the new ~/.cvspass functionality
	* TODO: Add a note about testing login/logout

2001-01-29  Derek Price  <derek.price@openavenue.com>

	* configure.in: Rewrite args to AC_TRY_COMMAND in a form that is
	acceptable to both Autoconf 1.13 and the new 1.49 beta.

	* configure: regenerated
 
2001-01-29  Larry Jones  <larry.jones@sdrc.com>

	* configure.in: Check for syslog.h.
	* configure, config.h.in: Regenerated.

2001-01-17  Derek Price  <derek.price@openavenue.com>

	* configure.in: add machinery to check for the BSD VPATH bug
	and check for texi2dvi.
	* doc/Makefile.am: use the machinery
	* diff/Makefile.in: changes to support 'make dist' from a build dir
	* emx/Makefile.in: changes to support 'make dist' from a build dir
	* os2/Makefile.in: changes to support 'make dist' from a build dir
	* zlib/Makefile.in: changes to support 'make dist' from a build dir

	* Makefile.in: regenerated
	* aclocal.m4: regenerated
	* configure: regenerated
	* contrib/Makefile.in: regenerated
	* doc/Makefile.in: regenerated
	* lib/Makefile.in: regenerated
	* man/Makefile.in: regenerated
	* src/Makefile.in: regenerated
	* tools/Makefile.in: regenerated
	* vms/Makefile.in: regenerated
	* windows-NT/Makefile.in: regenerated
	* windows-NT/SCC/Makefile.in: regenerated

2001-01-10  Derek Price  <derek.price@openavenue.com>
	    Rex Jolliff  <Rex_Jolliff@notes.ymp.gov>

	* NEWS (new since 1.11): Add comment about VMS wildcards

2001-01-05  Derek Price  <derek.price@openavenue.com>

	* configure.in (AC_OUTPUT): Move some script targets here
	* contrib/Makefile.am (EXTRA_DIST, SUFFIXES, .pl:, .csh:): Move some
	script targets to configure.in
	* src/Makefile.am (cvsbug, cvsbug_EXTRA_DIST, EXTRA_DIST): move cvsbug
	target to configure.in

	* aclocal.m4: Regenerated due to change in Automake installation
