@@ -1,3 +1,11 @@
+2001-02-07  Derek Price  <derek.price@openavenue.com>
+
+	* cvs.spec.in (build): Remove the info 'dir' file so it doesn't get
+	installed accidentally.
+	(post): Install info files _into_ system dir file
+	(preun): uninstall info files from dir file
+	* cvs.spec: regenerated
+
 2001-01-31  Derek Price  <derek.price@openavenue.com>
 
 	* TODO: Add a note about 'cvs add' w/o write access
